--- a/app/views/about_us/contact.html.erb
+++ b/app/views/about_us/contact.html.erb
@@ -1,1 +1,4 @@
-<h1>Contact</h1>
+<h1 style="text-align:center"> Comment nous contacter ?</h1>
+<br/>
+
+<h3 style="text-align:center"> &#128233; undefined_method@gmail.com </h3>
