--- a/app/views/about_us/team.html.erb
+++ b/app/views/about_us/team.html.erb
@@ -1,2 +1,35 @@
-<h1>Bienvenue sur la page de présentation de l'équipe</h1>
-<p>Voici la team </p>
+</html>
+
+
+
+<h1 style="text-align:center;"> Présentation de la Team</h1>
+
+<br>
+<br>
+
+<div class="row justify-content-center">
+<div class="col-lg-6">
+<div class="card">
+  <h5 class="card-header">Mathilde la reine des erreurs</h5>
+  <div class="card-body">
+    <h5 class="card-title">&#10060; &#128120; &#10060;</h5>
+    <p class="card-text">Spécialisée dans la recherche d'erreurs en tout genre, elle est capable d'en générer 10 à la minute !</p>
+    <a href="#" class="btn btn-primary">Linkdedin</a>
+  </div>
+</div>
+</div>
+
+<div class="row justify-content-center">
+<div class="col-lg-10">
+<div class="card">
+  <h5 class="card-header">Tim le filou</h5>
+  <div class="card-body">
+    <h5 class="card-title">&#128526;</h5>
+    <p class="card-text">Etudiant en droit, Tim sera toujours là pour te rappeler que ce que tu viens de faire est illégal.. Un conseil : deviens son ami !</p>
+    <a href="#" class="btn btn-primary">Linkedin</a>
+  </div>
+</div>
+
+
+
+</html>
