--- a/app/views/gossip/edit.html.erb
+++ b/app/views/gossip/edit.html.erb
@@ -1,24 +1,28 @@
-<h2>Tu peux modifier le potin</h2>
+
 
 <div class="card create-potin">
   <div class="card-header">
-    <h2>Modification d'un potin</h2>
+    <h2 style="text-align:center">Modifie ton potin ici !</h2>
   </div>
   <div class="card-body">
     <blockquote class="blockquote mb-0">
       <%= form_tag url_for(action: 'update'), method: "patch" do %>
 
-        <%= label_tag 'Titre de ton potin' %>
-        <%= text_field_tag 'title' %>
-        <br /> <br />
+<div class="form-group">
+        <%= text_field_tag 'title', @gossip.title, class: 'form-control', placeholder: 'Titre' %>
+      </div>
 
-        <%= label_tag 'Description de ton potin' %>
-        <%= text_area_tag 'content' %>
-        <br /> <br />
 
-        <%= submit_tag "Soumet ton potin" %>
+        <div class="form-group">
+       <%= text_area_tag 'content', @gossip.content, class: 'form-control', placeholder: 'Contenu' %>
+      </div>
+
+       
+      <div class="btn-group mr-2" role="group">
+              <%= submit_tag "Créer ton potin !", class: "btn btn-primary mx-1" %> 
+            </div>
 
       <% end %>
-    </blockquote>
+    
   </div>
 </div>
