--- a/app/views/gossip/index.html.erb
+++ b/app/views/gossip/index.html.erb
@@ -1,15 +1,25 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron">
+<div class="jumbotron bg-dark">
   <div class="container">
-    <h1 class="display-3">Bievenue sur le Gossip Project !</h1>
-    
-      <p>Que s'est-il passé aujourd'hui ? </p>
-      <p><a class="btn btn-primary btn-lg" href="/gossip/new" role="button">Créer un potin &raquo;</a></p>
+    <h1 class="display-3">Bienvenue sur <span class="font-simply"> The Gossip Project</span> !</h1>
+    <br/>
+
+      <h2><p>LE site des potins en tout genre !</p></h2>
+      
+<hr class="my-4">
+
+<h4><p>Tu veux créer tes propres potins ?</p></h4>
+
+
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="/gossip/new" role="button">Clique ici &#128527;</a>
+  </p>
   </div>
 </div>
 
 
-<h4> Voici la liste des potins </h4>
+<h3 style="text-align:center"> Liste des potins </h3>
+
 
 <div class="row">
   <% @gossips.each do |gossip| %>
@@ -19,13 +29,13 @@
           <h4><%= gossip.title %></h4>
         </div>
         <div class="card-body">
-          <h5 class="card-title">A été écrit par <%= gossip.user.first_name %></h5>
-          <%= link_to "En savoir plus...", gossip_path(gossip.id), class:"btn btn-primary" %>
+          <h5 class="card-title">Posté par <%= gossip.user.first_name %></h5>
+          <%= link_to "En savoir plus...", gossip_path(gossip.id), class:"btn btn-light border border-primary" %>
           
           <% if gossip.likes.where(user_id: current_user).count > 0 %>
             <%= link_to "Dislike", like_path(:id => gossip.likes.sample), method: :delete, class:"btn btn-danger" %>
           <% else %>
-            <%= link_to "liker", like_index_path(:id => gossip.id), method: :post, class:"btn btn-danger" %>
+            <%= link_to "Like", like_index_path(:id => gossip.id), method: :post, class:"btn btn-success" %>
           <% end %>
           <%= gossip.likes.count %>
 
@@ -34,3 +44,4 @@
     </div>
   <% end %>
 </div>
+
