--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>KjGossipRails2</title>
+    <title>TheGossipProject</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -12,8 +12,8 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <%= link_to "Home", root_path, class: 'navbar-brand' %>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+        <%= link_to "Accueil", root_path, class: 'navbar-brand' %>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,18 +21,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <%= link_to "Contact", contact_path, class: 'nav-link' %>
+              <%= link_to "Nous contacter", contact_path, class: 'nav-link' %>
             </li>
-            <li class="nav-item">
-              <%= link_to "Team", team_path, class: 'nav-link' %>
+            <li class="nav-item active">
+              <%= link_to "L'équipe", team_path, class: 'nav-link' %>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if current_user %>
               <li><%= link_to "Déconnexion", session_path(session[:user_id]), method: :delete, class: 'nav-link' %></li>
             <% else %>
-              <li><%= link_to "Sign up", new_user_path, class: 'nav-link' %></li>
-              <li><%= link_to "Sign in", new_session_path, class: 'nav-link' %></li>
+              <li><%= link_to "S'inscrire", new_user_path, class: 'nav-link' %></li>
+              <li><%= link_to "Se connecter", new_session_path, class: 'nav-link' %></li>
             <% end %>
           </ul>
         </div>
