--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -9,45 +9,50 @@
   </div>
 <% end %>
 
-<div class="card create-potin">
-  <div class="card-header">
-    <h2>Création d'un utilisateur</h2>
+<div class="card container text-center mt-5 border border-success">
+  <div class="card-header" style="background-color: #FFFFFF">
+    <h2>Inscription</h2>
   </div>
-  <div class="card-body">
-    <blockquote class="blockquote mb-0">
+  <div class="container text-center mt-2" style="text-align:center">
+    
       <%= form_tag url_for(action: 'create'), method: "post" do %>
 
-        <%= label_tag 'Nom' %>
-        <%= text_field_tag 'last_name' %>
-        <br /> <br />
+      <div class="form-group">
+        <%= text_field_tag 'name', @user.last_name, class: 'form-control', placeholder: 'Nom' %>
+      </div>
 
-        <%= label_tag 'Prénom' %>
-        <%= text_field_tag 'first_name' %>
-        <br /> <br />
+      <div class="form-group">
+        <%= text_field_tag 'first_name', @user.first_name, class: 'form-control', placeholder: 'Prénom' %>
+      </div>
 
-        <%= label_tag 'Une description de toi' %>
-        <%= text_area_tag 'description' %>
-        <br /> <br />
+      <div class="form-group">
+        <%= text_field_tag 'description', @user.description, class: 'form-control', placeholder: 'Description' %>
+      </div>
 
-        <%= label_tag 'E-mail' %>
-        <%= text_field_tag 'email' %>
-        <br /> <br />
+      <div class="form-group">
+        <%= text_field_tag 'email', @user.email, class: 'form-control', placeholder: 'Email' %>
+      </div>
 
-        <%= label_tag 'Age' %>
-        <%= text_field_tag 'age' %>
-        <br /> <br />
+      <div class="form-group">
+        <%= text_field_tag 'age', @user.age, class: 'form-control', placeholder: 'Age' %>
+      </div>
 
-        <%= label_tag 'Entre ton mot de passe' %>
-        <%= password_field_tag 'pass_first' %>
-        <br /> <br />
+      <div class="form-group">
+        <%= password_field_tag 'pass_first', @user.password_digest, class: 'form-control', placeholder: ' Entre ton mot de passe' %>
+      </div>
+      
+      <div class="form-group">
+        <%= password_field_tag 'pass_second', @user.password_digest, class: 'form-control', placeholder: 'Confirme ton mot de passe' %>
+      </div>
 
-        <%= label_tag 'Confirme ton mot de passe' %>
-        <%= password_field_tag 'pass_second' %>
-        <br /> <br />
+      <div class="btn-group mr-2" role="group">
+              <%= submit_tag "Créer ton profil", class: "btn btn-primary mx-1" %> 
+            </div>
 
-        <%= submit_tag "Créer mon profil" %>
 
+
+        </div>
       <% end %>
-    </blockquote>
+ 
   </div>
 </div>
