--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,18 +1,25 @@
-<div class="container-fluid position-absolute mt-4">
-  <h3 class="text-center font-weight-bold">User informations</h3>
-  <div class="row d-flex justify-content-center">
-    <div class="col-xs">
-      <div class="card shadow-sm alert alert-success">
-        <div class="card-body text-dark">
-          <h5 class="card-title text-center font-weight-bold"><%= @user.first_name %> <%= @user.last_name %></h5>
-          <h5 class="card-title text-center"><span class="badge badge-secondary">Email : <%= @user.email %></span></h5>
-          <h6 class="card-text text-center">Age : <%= @user.age%> </h6>
-          <h6 class="card-text text-center"> Ville : <%= link_to @user.city.name, city_path(@user.city.id) %> </h6>
-          <p class="card-text text-center"><%= @user.description%></p>
-          <p class="card-text text-center"> <%= link_to "Revenir à la liste des potins", root_path %> </p>
+<body>
+    <% user = User.find(params['id']) %>
 
-        </div>
-      </div>
-    </div>
-  </div>
+
+<div class="row justify-content-center">
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="https://pixabay.com/get/55e6d0434a5aac14f6da8c7dda35367b1d37d7e15b587140_1280.png" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title text-center">Infos utilisateurs</h5>
+<p class="card-text text-center"><%= user.first_name%> <%= user.last_name%></p>  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item text-center"><%= user.email%></li>
+    <li class="list-group-item"><%= user.description%></li>
+    <li class="list-group-item text-center">Age : <%= user.age%></li>
+
+
+    <li class="list-group-item text-center"> <%= user.city.name%> <br/>
+    <%= link_to "Infos sur la ville", city_path(user.city.id) %>
+    </li>
+
 </div>
+</div> 
+      
+  </body>
+    
